# sprite_animation

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp
